--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
-.blurBKG {
+/*For index.html*/
+.mainBackground {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
@@ -17,6 +17,20 @@
     justify-content: center;
 }
 
+/*For leistungen.html */
+.mainBackground2 {
+    width: 100%;
+    height: 210vh;
+    background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
+    <!--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));-->
+    position: relative;
+    padding: 0 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*Navigation bar */
 nav{
     width: 100%;
     height: 300px;
@@ -30,18 +44,17 @@ nav{
     <!--box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.35);>
     backdrop-filter: blur(10px);
 }
-
+/*Logo */
 nav .logo{
     width: 280px;
 }
-
-
+/*Navigation buttons */
 nav ul li{
     list-style: none;
     display: inline-block;
     margin-left: 40px;
 }
-
+/*Navigation buttons text */
 nav ul li a{
     text-decoration: none;
     color: #fff;
@@ -51,29 +64,29 @@ nav ul li a{
     border-radius: 50px;
     transition: 0.5s;
 }
-
+/*Navigation buttons "on Hover" effect */
 nav ul li a:hover{
     -webkit-text-stroke: 1px #5FB0FF;
 }
 
+/*Element: big text in the middle for index.html */
 .content{
     text-align: center;
 }
-
+/*Its Text design */
 .content h1{
     text-decoration: none;
-
     font-size: 120px;
     color: #fff;
     font-weight: 600;
     transition: 0.5s;
 }
-
+/*"On Hover" effect for the text in the middle */
 .content h1:hover{
     -webkit-text-stroke: 2px #fff;
     color: transparent;
 }
-
+/*The button underneath the big text from index.html */
 .content a{
     text-decoration: none;
     display: inline-block;
@@ -85,70 +98,93 @@ nav ul li a:hover{
     margin-top: 20px;
     transition: 0.5s;
 }
-
+/*"On Hover" effect for the button */
 .content a:hover{
     -webkit-text-stroke: 1px #5FB0FF;
 }
-
+/* */
+/* */
+/*Element: big text in the middle for leistungen.html */
+.content-Leistung{
+    text-align: center;
+}
+/*Its text design */
+.content-Leistung h1{
+    text-decoration: none;
+    font-size: 140px;
+    color: #fff;
+    font-weight: 600;
+    transition: 0.5s;
+    margin-bottom: 140vh;
+    margin-top: 50vh;
+}
+/*"On Hover" effect for the text in the middle from leistungen.html */
+.content-Leistung h1:hover{
+    -webkit-text-stroke: 2px #FFF;
+    color: transparent;
+}
+/* */
+/* */
+/*The background Video from index.html */
 .back-video{
     position: absolute;
     right: 0;
     bottom: 0;
     z-index: -1;
 }
-
-
+/*Commands to keep the minimum aspect-ratio of the background video */
 @media (min-aspect-ratio: 16/9){
     .back-video{
         width: 100%;
         height: auto;
     }
 }
-
+/*Commands to keep the maximum aspect-ratio of the background video */
 @media (max-aspect-ratio: 16/9){
     .back-video{
         width: auto;
         height: 100%;
     }
 }
-
-
-
-
-
+/* */
+/* */
+/* */
+/*The text-box from leistungen.html */
+.textbox-leistung{
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 10em;
+    display: table-cell;
+    vertical-align: middle;
+    width: 58em;
+    position: absolute;
+    margin-top: 90vh;
+}
+/*The text within the box */
 .textbox-leistung h1{
-    display: block;
-    margin: auto;
-    border: 3px;
-    border-style: solid;
-    border-color: #5FB0FF;
+    align-items: center;
+    display:inline-block;
+    color: #fff;
+    font-size: 18px;
+    border: 4px solid #5FB0FF;
+    padding: 14px 70px ;
     border-radius: 50px;
-    padding: 1em;
-    border-left-width: 3px;
-    width: 35%;
-    font-family: Poppins;
+    text-align: left;
+    box-shadow: 0 15px 20px rgb(0 0 0 / 50%);
+    background: rgba(80, 84, 87, 0.295);
+    width: 900px;
+    height: 900px;
 }
-
-.bild-leistung {
-    height: 240px;
-    width: 180px;
-    background: url(eu2.jpeg);
-    align-self: center;
-    background-size: 100%;
-    transition: 0.2s;
-    float: right;
-    padding: 0 10px 0 0;
-}
-
-.bild-leistung:hover{
-    background-size: 130%;
-    background-position: top;
-}
-
+/* */
+/* */
+/*The background image from leistungen.html */
 .background-img2{
-    background-image: url(bckimg2.jpg);
-    height: 100%;
+    background-image: url(bckimg3.jpg);
+    height: 210vh;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: absolute;
+    z-index: -1;
 }
