--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
-    <!--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));-->
+    /*--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));--*/
     position: relative;
     padding: 0 5%;
     display: flex;
@@ -22,7 +22,7 @@
     width: 100%;
     height: 210vh;
     background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
-    <!--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));-->
+    /*--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));--*/
     position: relative;
     padding: 0 5%;
     display: flex;
@@ -41,7 +41,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    <!--box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.35);>
+    /*box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.35);*/
     backdrop-filter: blur(10px);
 }
 /*Logo */
