--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,7 @@
 /*Navigation bar */
 nav{
     width: 100%;
-    height: 300px;
+    height: 12em;
     position: absolute;
     top: 0;
     left: 0;
@@ -116,7 +116,7 @@ nav ul li a:hover{
     font-weight: 600;
     transition: 0.5s;
     margin-bottom: 140vh;
-    margin-top: 50vh;
+    margin-top: 3em;
 }
 /*"On Hover" effect for the text in the middle from leistungen.html */
 .content-Leistung h1:hover{
@@ -158,7 +158,7 @@ nav ul li a:hover{
     vertical-align: middle;
     width: 58em;
     position: absolute;
-    margin-top: 90vh;
+    margin-top: 60em;
 }
 /*The text within the box */
 .textbox-leistung h1{
