--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body{
+    min-height: 100vh;
+}
+
 /*For index.html*/
 .mainBackground {
     width: 100%;
