--- a/public/style.css
+++ b/public/style.css
@@ -9,10 +9,21 @@ body{
     min-height: 100vh;
 }
 
+.main-content 
+{
+    width: 100%;
+    position: relative;
+    padding: 0 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
 /*For index.html*/
 .mainBackground {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
     /*--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));--*/
     position: relative;
@@ -20,19 +31,21 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
 }
 
 /*For leistungen.html */
 .mainBackground2 {
     width: 100%;
-    height: 210vh;
+    height: 100%;
     background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
     /*--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));--*/
-    position: relative;
+    position: absolute;
     padding: 0 5%;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: -1;
 }
 
 /*Navigation bar */
@@ -120,8 +133,8 @@ nav ul li a:hover{
     color: #fff;
     font-weight: 600;
     transition: 0.5s;
-    margin-bottom: 140vh;
-    margin-top: 3em;
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
 /*"On Hover" effect for the text in the middle from leistungen.html */
 .content-Leistung h1:hover{
@@ -162,11 +175,9 @@ nav ul li a:hover{
     display: table-cell;
     vertical-align: middle;
     width: 56em;
-    position: absolute;
-    margin-top: 60em;
 }
 /*The text within the box */
-.textbox-leistung h1{
+.textbox-leistung div{
     align-items: center;
     display:inline-block;
     color: #fff;
@@ -178,20 +189,27 @@ nav ul li a:hover{
     box-shadow: 0 15px 20px rgb(0 0 0 / 50%);
     background: rgba(80, 84, 87, 0.295);
     width: 900px;
-    height: 900px;
 }
+
+.textbox-leistung ul {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.textbox-leistung-title {
+    margin-top: 40px;
+}
+
 /* */
 /* */
 /*The background image from leistungen.html */
 .background-img2{
     background-image: url(bckimg3.jpg);
-    height: 210vh;
+    height: 100%;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
-    z-index: -1;
-    min-height: 210vh;
-    max-height: 210vh;
+    z-index: -2;
 }
