--- a/public/style.css
+++ b/public/style.css
@@ -296,3 +296,135 @@ textarea.kontakt-form-text{
     position: absolute;
     z-index: -2;
 }
+
+footer {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.footer-nav {
+    justify-content: center;
+    border-bottom: 2px;
+    border-color: #DDDDDD;
+    border-bottom-style: solid;
+    padding-bottom: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.footer-nav li a {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    text-decoration: none;
+    color: #004aad;
+}
+
+.footer-nav li a:hover {
+    color: #2ea3f0;
+}
+
+.footer-bottom {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.footer-copyright {
+    display: flex;
+    align-items: center;
+}
+
+.footer-socials {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    justify-content: end;
+}
+
+.footer-socials a {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    text-decoration: none;
+    text-align: center;
+    height: 24px;
+}
+
+.footer-socials a li p {
+    color: #9d00ad;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: inline-block;
+}
+
+.footer-socials li {
+    margin-left: 1rem;
+}
+
+#features {
+    padding-top: 50px;
+}
+
+#features h2 {
+    margin-top: 25px;
+    height: 75px;
+}
+
+#features ul {
+    justify-content: center;
+    padding-bottom: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    text-align: center;
+}
+
+#features ul li {
+    width: 200px;
+    height: 350px;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+.feature-text{
+
+}
+
+.feature-image{
+}
+
+#section-contact {
+    background-color: #d7f2ff;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+#section-contact p {
+    display: inline-block;
+    font-size: 30px;
+    margin-top: auto;
+    margin-bottom:auto;
+}
+
+#section-contact a {
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    border: 4px solid #5FB0FF;
+    color: #000;
+    padding: 14px 70px;
+    border-radius: 50px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 40px;
+}
+
+#section-contact div {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
