--- a/public/style.css
+++ b/public/style.css
@@ -175,6 +175,7 @@ nav ul li a:hover{
     display: table-cell;
     vertical-align: middle;
     width: 56em;
+    padding: 80px;
 }
 /*The text within the box */
 .textbox-leistung div{
